Fri Jun 22 09:31:04 2001  Ossama Othman  <ossama@uci.edu>

	* html/index.html:

	  Corrected hyperlink for SSLIOP documentation.

Fri Jun 22 10:27:01 2001  Paul Calabrese  <calabrese_p@ociweb.com>

        * html/index.html:

          Add missing directories for Doxygen docs.

Fri Jun 22 00:26:34 2001  Krishnakumar B  <kitty@cs.wustl.edu>

	* examples/Log_Msg/test_ostream.cpp (main):

	  Changed the type of flags to ios::openmode from int to fix
	  errors under gcc-3.0.

	* examples/IOStream/client:
	* examples/IOStream/server:

	  Added ACE_UNUSED_ARG to fix a couple of warnings.

Thu Jun 21 13:57:09 2001  Chad Elliott  <elliott_c@ociweb.com>

        * apps/JAWS/clients/Caching/http_handler.h:

          Fix a warning with g++.

Thu Jun 21 09:01:09 2001  Chad Elliott  <elliott_c@ociweb.com>

        * include/makeinclude/platform_aix_ibm.GNU:

          Fix for 64-bit AIX builds.  The ARFLAGS definition must have -X64
          before any of the other options.

Thu Jun 21 08:27:40 2001  Chad Elliott  <elliott_c@ociweb.com>

        * ace/config-aix-4.x.h:

          Fix for 64-bit AIX builds.

Thu Jun 21 08:00:01 2001  Chad Elliott  <elliott_c@ociweb.com>

        * apps/Gateway/Peer/Peer.h:
        * apps/JAWS/clients/Blobby/Blob.h:
        * apps/JAWS/clients/Caching/http_handler.h:
        * examples/ASX/Event_Server/Transceiver/transceiver.cpp:
        * examples/Connection/misc/test_upipe.cpp:

         Moved #include "ace/Connector.h" to be after #include
         "ace/SOCK_Connector.h" to fix compile error on AIX, Visual
          Age C++ 5.  Thanks to David Sperry <sperryd@res.raytheon.com>
 	  for reporting this.

        * apps/JAWS/server/Makefile:

          Move include of wrapper_macros.GNU below the check of the
          ACE_BUILD_COMPONENTS to avoid a warning about overriding commands
          for target libJAWS.a for AIX, Visual Age C++, 5.

        * include/makeinclude/platform_aix_ibm.GNU:
