@@ -1268,6 +1268,7 @@ Victor Pitchouc <pitchouc@tlsoft.ru>
 Srikanth Vedire <srvedire@yahoo.com>
 J Shane Culpepper <pepper@channelogics.com>
 Benn Howard <Benn_Howard@raytheon.com>
+Steffen Hieber <Steffen.Hieber@erl9.siemens.de>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson in the early 1990's.  Paul devised the recursive Makefile
